--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <h2>Introductie</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/kun fu panda.jpg">
+                        <img src="images\kun fu panda.jpg">
                     </div>
                 </header>
                 <section>
